--- a/public/drag.html
+++ b/public/drag.html
@@ -39,7 +39,16 @@
           })
           .use(DragDrop, {
               inline: true,
-              target: '#drag-drop-area'
+              target: '#drag-drop-area',
+              locale: {
+                strings: {
+                  // Text to show on the droppable area.
+                  // `%{browse}` is replaced with a link that opens the system file selection dialog.
+                  dropHereOr: 'Suelta archivos o %{browse}',
+                  // Used as the label for the link that opens the system file selection dialog.
+                  browse: 'navega',
+                }
+              }
             })
           .use(ProgressBar, { target: '.example .for-ProgressBar', hideAfterFinish: true })
           .use(AwsS3, {
