--- a/public/drag.html
+++ b/public/drag.html
@@ -44,7 +44,7 @@
                 strings: {
                   // Text to show on the droppable area.
                   // `%{browse}` is replaced with a link that opens the system file selection dialog.
-                  dropHereOr: 'Suelta archivos o %{browse}',
+                  dropHereOr: 'Arrastra archivos o %{browse}',
                   // Used as the label for the link that opens the system file selection dialog.
                   browse: 'navega',
                 }
